--- a/public/stylesheets/sr-about.css
+++ b/public/stylesheets/sr-about.css
@@ -1,3 +1,10 @@
+
+#synthesis-data {
+	border-style: solid;
+	border-width: medium;
+
+}
+
 #last-edition-date {
 	font-style: italic;
 }
@@ -11,4 +18,13 @@
 #sr-intro-prince {
 	font-size : 180%;
 	font-weight : bold;
+}
+
+.centered {
+	text-align : center;
+}
+
+.important {
+	color : blue;
+	font-weight: bold;
 }
