Modification du modèle du topic en DB

--- a/public/stylesheets/sr-about.css
+++ b/public/stylesheets/sr-about.css
@@ -28,3 +28,13 @@
 	color : blue;
 	font-weight: bold;
 }
+
+.veryimportant {
+	color : red;
+	font-weight : red;
+}
+
+#sr-topic-availability-container {
+	border-style: solid;
+	border-width: medium;
+}
