Début migration angular 6 :
- Suppression de l'ancien appClient
- Création du routing de l'application
- Modification de la conf correspondante
- Travail bien entamé sur le module export, à terminer!

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+#navigation-component{
+  width: 100%;
+  height: 400px;
+}
+
+#navigation-component #banner {
+  position: relative;
+  width: 100%;
+  height: auto;
+}
