--- a/src/app/export/export.component.html
+++ b/src/app/export/export.component.html
@@ -1,8 +1,53 @@
-<p><b>IMPORTANT : </b><p>Suite à des problèmes de performance (téléchargement volumineux), le fonctionnement a légèrement changé. </p>
-<p>Vous pouvez voir la date de dernière mise à jour des fichiers.</p>
-<p>Si un fichier doit être mis à jour, appuyez sur l'option "générer". Ceci prend environ une minute au maximum (laisser le navigateur tourner et vérifier que la date de dernière mise à jour a changé quand la minute est passée) </p>
-<b>Bonne utilisation! </b>
+<mat-card>
+  <mat-card-title>Interface d'export des rapports Sang Royale</mat-card-title>
+  <mat-card-content>
+    <br/>
 
-<h1>Export des données gdc</h1>
+    <!-- Clans -->
+    <h4>Sélectionner le clan pour lequel générer un rapport</h4>
+    <mat-form-field>
+      <mat-label>Selection du clan</mat-label>
+      <mat-select [(ngModel)]="selectedClan" name="clan" required>
+        <mat-option *ngFor="let clan of clans" [value]="clan.id">{{clan.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
 
-<h1>Export des données pour les performances des joueurs (record + saison) </h1>
+  <!-- DatePicker a mettre -->
+
+    <!-- Types de rapport disponible -->
+    <h4>Sélectionner le type de rapport à générer</h4>
+    <mat-form-field>
+      <mat-label>Sélection du type</mat-label>
+      <mat-select [(ngModel)]="selectedType" name="type" required>
+        <mat-option *ngFor="let type of types" [value]="type">{{type}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+<!--
+    <mat-card id="download-container" *ngIf="selectedClan != null && selectedType != null">
+      <mat-card-content>
+        
+      </mat-card-content>
+      
+      
+      
+    </mat-card>
+  -->
+
+  </mat-card-content>
+
+  <mat-card-actions>
+        <button mat-raised-button color="primary" (click)="downloadReport()"
+        *ngIf="selectedClan != null && selectedType != null"
+        >Télécharger</button>
+  </mat-card-actions>
+
+  <mat-card class="progress-card">
+     <mat-card-title>Génération du rapport pour le téléchargement</mat-card-title>
+    <mat-card-content>
+      <p class="progress-label">Téléchargement des données depuis CR-API (1/3)</p>
+     <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
+    </mat-card-content>
+  </mat-card>
+
+</mat-card>
