--- a/src/app/export/export.component.css
+++ b/src/app/export/export.component.css
@@ -14,6 +14,12 @@ body {
   background-color: lightgrey;
 }
 
+.progress-error {
+	color : red;
+  font-style : italic;
+  font-size : 10px;
+}
+
 .progress-label {
   color : black;
   font-style : italic;
