--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<!--
 <div id="navigation-component">
-    <img id="banner" src="images/image3754.png" alt="oups">
+    <img class = "header" src="https://image.noelshack.com/fichiers/2019/22/1/1558948072-imagesr.png">
 </div>
--->
+
 <router-outlet></router-outlet>
 
