--- a/src/app/export/export.component.css
+++ b/src/app/export/export.component.css
@@ -1,9 +1,9 @@
 /* Add application styles & imports to this file! */
 
-body { 
+/* body { 
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
-}
+} */
 
 #download-container {
   background-color : grey;
@@ -25,3 +25,13 @@ body {
   font-style : italic;
   font-size : 10px;
 }
+
+#export-card-container {
+  margin-right : 75px;
+  margin-left : 50px;
+  border: 3px solid;
+  border-radius: 5px;
+  border-color: rgb(150, 0, 0);
+  //padding-top : 50px;
+}
+
