--- a/src/app/export/export.component.html
+++ b/src/app/export/export.component.html
@@ -1,3 +1,5 @@
+
+<div id="export-card-container">
 <mat-card>
   <mat-card-title>Interface d'export des rapports Sang Royale</mat-card-title>
   <mat-card-content>
@@ -52,3 +54,7 @@
   </mat-card>
 
 </mat-card>
+
+
+
+</div>
