--- a/src/app/export/export.component.html
+++ b/src/app/export/export.component.html
@@ -44,7 +44,7 @@
             </mat-form-field>
         </div>
         <div class="col">
-          <p>Horaire</p>
+          <mat-checkbox class="example-margin" [(ngModel)]="checked">Trier les gdcs de la plus ancienne à la plus récente</mat-checkbox>
         </div>
 
 
