Mise à jour API RoyaleApi vers celle de Supercell

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="navigation-component">
-    <img class = "header" src="https://image.noelshack.com/fichiers/2019/22/1/1558948072-imagesr.png">
+    <img class = "header" src="images/image18.png">
 </div>
 
 <router-outlet></router-outlet>
