--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,23 @@
-<div class="jumbotron">
-  <h1 class="display-4">Sang Royale lance son maillot e-sport pour la PGW</h1>
-  <p class="lead">Aide nous à le choisir. Deux des participants au sondage gagneront un Pass Royale.</p>
-  <hr class="my-4">
-  <p>Les résultats du tirage au sort seront annoncés <b>en fin de mois sur Discord</b>! Bonne chance à tous!</p>
-  <!--
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </p>
-  -->
+
+<div id="header-card-container">
+
+  <mat-card>
+
+    <mat-card-title class="display-4">Bienvenue sur le site de Sang Royale! </mat-card-title>
+    <mat-card-content>
+      <p class="lead">Ce site a pour but de présenter les activités de la communauté gaming Sang Royale. Il est encore en cours de développement. </p>
+      <hr class="my-4">
+      <p>Vous pouvez toujours venir sur notre Discord pour nous contacter</p>
+    </mat-card-content>
+    <mat-card-actions>
+      <a mat-button color="primary" href="https://discord.gg/kgNDsht">Venir sur notre Discord</a>
+    </mat-card-actions>
+  </mat-card>
+
+
 </div>
+
+
 
 <!-- Caroussel -->
 <ngb-carousel *ngIf="images" class="home-carousel">
