--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,6 @@
 body { 
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
-  background-image : url("https://image.noelshack.com/fichiers/2019/22/1/1558946942-4k-wallpaper-architecture-background-1308624.jpg");
+  background-image: url("images/pexels-photo-952670.jpeg");
   background-size: 100% auto;
 }
